// Copyright Â© Aptos Foundation
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package aptos.remote_executor.v1;

message NetworkMessage {
    bytes message = 1;
    string message_type = 2;
    optional uint64 ms_since_epoch = 3;
}

message Empty {

}

service NetworkMessageService {
    rpc SimpleMsgExchange(NetworkMessage) returns (Empty);
}